Retirando o metodo .save

--- a/templates/cisco_xr_add_int.j2
+++ b/templates/cisco_xr_add_int.j2
@@ -2,3 +2,4 @@ interface {{ data.interface }}
  description {{ data.description }}
  dot1q vlan {{ data.vlan_id }}
  ipv4 address {{ data.ip_address }}
+ commit
